infrastructure/configs/ingress-weave-gitops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-weave-gitops
  namespace: flux-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: weave.coding-challenge.hess.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-gitops
                port:
                  number: 9001
