infrastructure/configs/traefik-dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.coding-challenge.hess.lan`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
